--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 							</div>
 							<div class="advantages_item">
 								<div class="advantages_item_title">Прозрачность</div>
-								<div class="advantages_item_text">ММы выстраиваем прозрачные и взаимовыгодные отношения с каждым партнером</div>
+								<div class="advantages_item_text">Мы выстраиваем прозрачные и взаимовыгодные отношения с каждым партнером</div>
 							</div>							
 						</div>
 					</div>
