--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 							<div class="field">
 								<label for="password2">
 									<span>Пароль</span>
-									<a href="#">Забыли пароль?</a>
+									<a href="#" class="lost-password">Забыли пароль?</a>
 								</label>
 								<input id="password2" type="password" placeholder="Введите пароль...">
 							</div>							
