--- a/index.html
+++ b/index.html
@@ -151,56 +151,56 @@
 						<div class="releases_items">
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases1.jpg" alt="" class="lozad">
+									<img data-lazy="images/releases1.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases2.jpg" alt="" class="lozad">
+									<img data-lazy="images/releases2.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases3.jpg" alt="" class="lozad">
+									<img data-lazy="images/releases3.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases4.jpg" alt="" class="lozad">
+									<img data-lazy="images/releases4.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>	
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases1.jpg" alt="" class="lozad">
+									<img data-lazy="images/releases1.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases2.jpg" alt="" class="lozad">
+									<img data-lazy="images/releases2.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases3.jpg" alt="" class="lozad">
+									<img data-lazy="images/releases3.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-src="images/releases4.jpg" alt="" class="lozad">
+									<img data-lazyc="images/releases4.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
