--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 						</a>
 
 						<nav class="menu row">
+
+							<a href="#" class="logo logo-mob">
+								<img src="images/logo.svg" alt="">
+							</a>
 														
 							<div class="item">
 								<a href="#">Главная</a>
@@ -206,6 +210,7 @@
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
 							</div>	
 						</div>
+						<a href="#" class="releases_link releases_link-mob contact_callback">Все релизы</a>
 					</div>
 				</section>
 
@@ -307,6 +312,7 @@
 								<div class="artists_item-text">Хип-Хоп</div>
 							</div>														
 						</div>
+						<a href="#" class="artists_link artists_link-mob contact_callback contact_callback-red">Все артисты</a>
 					</div>
 				</section>
 
@@ -370,7 +376,7 @@
 									<div class="news_item-subtitle">Подзаголовок статьи</div>
 								</div>
 								<div class="news_item-img">
-									<img data-src="images/news1.jpg" alt="" class="lozad">
+									<img src="images/news1.jpg" alt="">
 								</div>
 							</a>
 						</div>
@@ -383,7 +389,7 @@
 										<div class="news_item-text">Краткий текст статьи</div>
 									</div>
 									<div class="news_item-img">
-										<img data-src="images/news2.jpg" alt="" class="lozad">
+										<img src="images/news2.jpg" alt="">
 									</div>
 								</a>
 								<a href="#" class="news_item">
@@ -392,7 +398,7 @@
 										<div class="news_item-subtitle">Подзаголовок</div>
 									</div>
 									<div class="news_item-img">
-										<img data-src="images/news3.jpg" alt="" class="lozad">
+										<img src="images/news3.jpg" alt="">
 									</div>
 								</a>
 								<a href="#" class="news_item">
@@ -401,7 +407,7 @@
 										<div class="news_item-subtitle">Подзаголовок</div>
 									</div>
 									<div class="news_item-img">
-										<img data-src="images/news4.jpg" alt="" class="lozad">
+										<img src="images/news4.jpg" alt="">
 									</div>
 								</a>
 							</div>
@@ -412,7 +418,7 @@
 										<div class="news_item-subtitle">Последние события и интересные факты</div>
 									</div>
 									<div class="news_item-img">
-										<img data-src="images/news5.jpg" alt="" class="lozad">
+										<img src="images/news5.jpg" alt="">
 									</div>
 								</a>
 								<a href="#" class="news_item">
