--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 									</a>
 								</div>
 								<a href="mailto:privet@domgnes.ru" class="footer_item-email">privet@domgnes.ru</a>
-								<a href="#" class="contact_callback modal_link contact_callback-red" data-content="#callback_modal">
+								<a href="#callback" class="contact_callback contact_callback-red scroll">
 									<span>Отправить демо</span>
 								</a>
 							</div>
