--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 							</div>
 							<div class="releases_item">
 								<div class="releases_item-img">
-									<img data-lazyc="images/releases4.jpg" alt="">
+									<img data-lazy="images/releases4.jpg" alt="">
 								</div>
 								<div class="releases_item-title">Все площадки</div>
 								<div class="releases_item-text">Ваш трек появится на всех существующих площадках и будет доступен во всем мире, на всех платформах</div>
@@ -229,84 +229,84 @@
 						<div class="artists_items">
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists1.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Валерия<br>	Иванова</div>
 								<div class="artists_item-text">Фолк-рок</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists2.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Иван<br> Петров</div>
 								<div class="artists_item-text">Классика</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists3.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Александра<br> смирнова</div>
 								<div class="artists_item-text">Хип-Хоп</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists4.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Агата<br>фролова</div>
 								<div class="artists_item-text">Авторская музыка</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists5.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Кристина<br> Мельникова</div>
 								<div class="artists_item-text">Поп</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists6.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Антон<br> Фадеев</div>
 								<div class="artists_item-text">Хип-Хоп</div>
 							</div>				
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists1.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Валерия<br>	Иванова</div>
 								<div class="artists_item-text">Фолк-рок</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists2.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Иван<br> Петров</div>
 								<div class="artists_item-text">Классика</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists3.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Александра<br> смирнова</div>
 								<div class="artists_item-text">Хип-Хоп</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists4.jpg" alt="">
 								</div>	
 								<div class="artists_item-title">Агата<br>фролова</div>
 								<div class="artists_item-text">Авторская музыка</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists5.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Кристина<br> Мельникова</div>
 								<div class="artists_item-text">Поп</div>
 							</div>
 							<div class="artistss_item">
 								<div class="artists_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
+									<img data-lazy="images/artists6.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Антон<br> Фадеев</div>
 								<div class="artists_item-text">Хип-Хоп</div>
