--- a/index.html
+++ b/index.html
@@ -227,84 +227,84 @@
 						</div>	
 
 						<div class="artists_items">
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists1.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Валерия<br>	Иванова</div>
 								<div class="artists_item-text">Фолк-рок</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists2.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Иван<br> Петров</div>
 								<div class="artists_item-text">Классика</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists3.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Александра<br> смирнова</div>
 								<div class="artists_item-text">Хип-Хоп</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists4.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Агата<br>фролова</div>
 								<div class="artists_item-text">Авторская музыка</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists5.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Кристина<br> Мельникова</div>
 								<div class="artists_item-text">Поп</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists6.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Антон<br> Фадеев</div>
 								<div class="artists_item-text">Хип-Хоп</div>
 							</div>				
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists1.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Валерия<br>	Иванова</div>
 								<div class="artists_item-text">Фолк-рок</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists2.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Иван<br> Петров</div>
 								<div class="artists_item-text">Классика</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists3.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Александра<br> смирнова</div>
 								<div class="artists_item-text">Хип-Хоп</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists4.jpg" alt="">
 								</div>	
 								<div class="artists_item-title">Агата<br>фролова</div>
 								<div class="artists_item-text">Авторская музыка</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists5.jpg" alt="">
 								</div>
 								<div class="artists_item-title">Кристина<br> Мельникова</div>
 								<div class="artists_item-text">Поп</div>
 							</div>
-							<div class="artistss_item">
+							<div class="artists_item">
 								<div class="artists_item-img">
 									<img data-lazy="images/artists6.jpg" alt="">
 								</div>
