Добавил about.html

--- a/about.html
+++ b/about.html
@@ -128,26 +128,25 @@
 				</header>
 
 
-
-				<section class="about">
+				<section class="about block">
 					<div class="cont">
 						<div class="breadcrumbs">
-							<a href="/">Главная</a> <span class="sep">/</span>
+							<a href="index.html">Главная</a> <span class="sep">·</span>
 							<span class="current">О нас</span>
 						</div>
 						<div class="about_title title">О нас</div>
 						<div class="about_description">
 							<div class="about_description-title">История  РАМ ИМ. ГНЕСИНЫХ</div>
-							<div class="about_description-text">
+							<div class="about_description-text mb64">
 								<p>Гнесинка – одно из самых знаменитых музыкальных учебных заведений России.</p>
 								<p>Академия носит имя сестёр Гнесиных: Елены, Евгении, Марии, Елизаветы и Ольги. Именно Елена Фабиановна вместе со своими сёстрами основала в феврале 1895 года музыкальное училище, ставшее в дальнейшем Российской академией музыки имени Гнесиных.</p>
 							</div>
 							<div class="about_description-box">
 								<div class="about_description-text">
-									<p>Елена Фабиановна была директором, художественным руководителем, профессором училища.</p>
+									<p class="mb0">Елена Фабиановна была директором, художественным руководителем, профессором училища.</p>
 									<p>Елена Гнесина посвятила всю жизнь музыкальной педагогике и всю жизнь прожила в том же доме, где размещалось ее детище, и атмосфера гостеприимного дома неизменно привлекала и учеников, и коллег. До сих пор в Гнесинке сохранилась часть дома сестер «Музей-квартира Е.Ф. Гнесиной», который можно посетить и проникнуться жизнью того времени. А перед входом в концертный зал академии в 2004 году был открыт памятник Елене Фабиановне, играющей на рояле, вместо крышки которого изображены крылья птиц.</p>
-									<p>Особенностью Училища всегда являлся тот факт, что независимо от знаний и возраста, любой человек мог стать студентом.</p>
-									<p>Принципы обучения, существовавшие в тот период в консерватории, легли в основу работы училища и соблюдаются по сей день.</p>
+									<p class="mb0">Особенностью Училища всегда являлся тот факт, что независимо от знаний и возраста, любой человек мог стать студентом.</p>
+									<p class="mb0">Принципы обучения, существовавшие в тот период в консерватории, легли в основу работы училища и соблюдаются по сей день.</p>
 									<p>Популярность училища быстро росла. И с тех пор Российская академия музыки имени Гнесиных по праву считается крупнейшим музыкальным институтом в Европе. Академия является единственным вузом, в котором представлены все специальности и специализации различных музыкальных направлений, изучаемых в России.</p>
 								</div>
 								<div class="about_img">
@@ -155,7 +154,7 @@
 								</div>								
 							</div>
 							<div class="about_description-title">ИДЕЯ СОЗДАНИЯ ЛЕЙБЛА</div>
-							<div class="about_description-box">		
+							<div class="about_description-box second">		
 								<div class="about_img">
 									<img src="images/about2.jpg" alt="">
 								</div>		
@@ -168,9 +167,13 @@
 					</div>
 				</section>
 
-			
+				<section class="about_quote block">
+					<div class="cont">
+						<div class="about_quote-text">«Дом Гнесиных» — это молодость, любовь к творчеству и желание быть услышанными.</div>
+					</div>
+				</section>			
 
-				<section class="advantages">
+				<section class="advantages block">
 					<div class="cont">
 						<div class="advantages_title title">Наши преимущества</div>
 						<div class="advantages_items">
@@ -195,17 +198,7 @@
 				</section>
 
 
-				<section class="quote">
-					<div class="cont">
-						<div class="quote_info">
-							<div class="quote_info-text">Музыка играет огромную роль в жизни человека, она вдохновляет людей на трудовые подвиги и облагораживает человека.</div>
-							<div class="quote_info-name">Елена Фабиановна Гне́сина</div>
-						</div>
-						<div class="quote_photo">
-							<img data-src="images/photo.png" alt="" class="lozad">
-						</div>
-					</div>
-				</section>
+
 
 
 				<section class="artists">
