Сделал artists.html

--- a/artists.html
+++ b/artists.html
@@ -132,83 +132,187 @@
 					<div class="cont">
 						<div class="breadcrumbs">
 							<a href="index.html">Главная</a> <span class="sep">·</span>
-							<a href="releases.html">Релизы</a> <span class="sep">·</span>
-							<span class="current">Видео</span>
+							<span class="current">Артисты</span>
 						</div>		
 					</div>
 				</div>
 
 
-				<section class="videos">
+				<section class="artist">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Видео</div>	
-						</div>					
+							<div class="releases_title title">Артисты</div>	
+						</div>				
 
-						<div class="videos_items">
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video1.jpg" alt="" class="lozad">
+						<div class="artist_items">
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists1.jpg" alt="" class="lozad">
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video2.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Валерия<br>	Иванова</div>
+								<div class="artist_item-text">Фолк-рок</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists2.jpg" alt="" class="lozad">
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video3.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Иван<br> Петров</div>
+								<div class="artist_item-text">Классика</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video1.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Александра<br> смирнова</div>
+								<div class="artists_item-text">Хип-Хоп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists4.jpg" alt="" class="lozad">
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video2.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Агата<br>фролова</div>
+								<div class="artist_item-text">Авторская музыка</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists5.jpg" alt="" class="lozad">
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video3.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Кристина<br> Мельникова</div>
+								<div class="artist_item-text">Поп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists6.jpg" alt="" class="lozad">
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video1.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Антон<br> Фадеев</div>
+								<div class="artist_item-text">Хип-Хоп</div>
+							</div>	
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists1.jpg" alt="" class="lozad">
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video2.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Валерия<br>	Иванова</div>
+								<div class="artist_item-text">Фолк-рок</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists2.jpg" alt="" class="lozad">
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>
-							<a href="#" class="videos_item">
-								<div class="videos_item-img">
-									<img data-src="images/video3.jpg" alt="" class="lozad">
+								<div class="artist_item-title">Иван<br> Петров</div>
+								<div class="artist_item-text">Классика</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
 								</div>
-								<div class="videos_item-title">Имя артиста</div>
-								<div class="videos_item-text">Название трека</div>
-							</a>								
+								<div class="artist_item-title">Александра<br> смирнова</div>
+								<div class="artists_item-text">Хип-Хоп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists4.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Агата<br>фролова</div>
+								<div class="artist_item-text">Авторская музыка</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists5.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Кристина<br> Мельникова</div>
+								<div class="artist_item-text">Поп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists6.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Антон<br> Фадеев</div>
+								<div class="artist_item-text">Хип-Хоп</div>
+							</div>	
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists1.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Валерия<br>	Иванова</div>
+								<div class="artist_item-text">Фолк-рок</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists2.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Иван<br> Петров</div>
+								<div class="artist_item-text">Классика</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
+								</div>
+								<div class="artist_item-title">Александра<br> смирнова</div>
+								<div class="artists_item-text">Хип-Хоп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists4.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Агата<br>фролова</div>
+								<div class="artist_item-text">Авторская музыка</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists5.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Кристина<br> Мельникова</div>
+								<div class="artist_item-text">Поп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists6.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Антон<br> Фадеев</div>
+								<div class="artist_item-text">Хип-Хоп</div>
+							</div>	
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists1.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Валерия<br>	Иванова</div>
+								<div class="artist_item-text">Фолк-рок</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists2.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Иван<br> Петров</div>
+								<div class="artist_item-text">Классика</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
+								</div>
+								<div class="artist_item-title">Александра<br> смирнова</div>
+								<div class="artists_item-text">Хип-Хоп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists4.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Агата<br>фролова</div>
+								<div class="artist_item-text">Авторская музыка</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists5.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Кристина<br> Мельникова</div>
+								<div class="artist_item-text">Поп</div>
+							</div>
+							<div class="artist_item">
+								<div class="artist_item-img">
+									<img data-src="images/artists6.jpg" alt="" class="lozad">
+								</div>
+								<div class="artist_item-title">Антон<br> Фадеев</div>
+								<div class="artist_item-text">Хип-Хоп</div>
+							</div>													
 						</div>
 						<div class="pagination">
 							<a href="#" class="prev"><img src="images/arrow-prev.svg" alt=""></a>
